<resources>
    <string name="app_name">Banco UDI2</string>
    <string name="nome_banco_txt">Banco UDI</string>
    <string name="saldo_usuario_number">0.00</string>
    <string name="saudacoes_usuario_txt">seja bem vindo</string>
    <string name="nome_default_usuario">nome</string>
    <string name="btn_sacar_txt">Sacar</string>
    <string name="btn_depositar_txt">Depositar</string>
    <string name="hint_valor_inserido_user">digite o valor desejado</string>
    <string name="insira_um_valor_txt">Insira um valor</string>
    <string name="login_text">Banco UDI</string>
    <string name="nome_usuario_login_txt">Nome</string>
    <string name="digite_seu_nome_hint">digite seu nome</string>
    <string name="saldo_inicial_txt">Saldo Inicial</string>
    <string name="digite_seu_saldo_inicial_hint">digite seu saldo inicial</string>
    <string name="btn_confirmar_txt">Confirmar</string>
    <string name="entrar_conta_btn_txt">Entrar</string>
    <string name="splash_loding_txt">AGUARDE</string>
</resources>