<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">


    <View
        android:id="@+id/ViewRedBackground"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:background="@drawable/view_background_01"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/BancoNomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/nome_banco_txt"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@id/ViewRedBackground"
        app:layout_constraintEnd_toEndOf="@id/ViewRedBackground"
        app:layout_constraintStart_toStartOf="@id/ViewRedBackground"
        app:layout_constraintTop_toTopOf="@id/ViewRedBackground" />

    <TextView
        android:id="@+id/SaudacoesUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/saudacoes_usuario_txt"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/BancoNomeText"
        app:layout_constraintBottom_toBottomOf="@id/SaldoUsuario"
        app:layout_constraintStart_toStartOf="@id/ViewRedBackground"
        app:layout_constraintEnd_toEndOf="@id/ViewRedBackground" />

    <TextView
        android:id="@+id/NomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_default_usuario"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/SaudacoesUsuario"
        app:layout_constraintBottom_toTopOf="@id/SaldoUsuario"
        app:layout_constraintStart_toStartOf="@id/ViewRedBackground"
        app:layout_constraintEnd_toEndOf="@id/ViewRedBackground"

        />

    <TextView
        android:id="@+id/SaldoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/saldo_usuario_number"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/NomeUsuario"
        app:layout_constraintBottom_toBottomOf="@id/ViewRedBackground"
        app:layout_constraintStart_toStartOf="@id/ViewRedBackground"
        app:layout_constraintEnd_toEndOf="@id/ViewRedBackground" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BTNSacar"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:minHeight="48dp"
        android:background="@drawable/custom_button"
        android:text="@string/btn_sacar_txt"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"


        app:layout_constraintTop_toBottomOf="@id/ViewRedBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BTNDepositar"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:minHeight="48dp"
        android:background="@drawable/custom_button"
        android:text="@string/btn_depositar_txt"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"


        app:layout_constraintTop_toBottomOf="@id/BTNSacar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/ViewRedBackgroundBotton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/view_background_01"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>